--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/styled-engine": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "react": "^19.1.0",
