--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
