Added Createbot component, refactored routing and services.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
