--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.0",
     "@mui/styled-engine": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@xyflow/react": "^12.6.4",
     "axios": "^1.9.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
