--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,9 @@
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
     "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.7"
   },
