--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "openai": "^4.103.0",
     "stripe": "^18.1.1",
     "twilio": "^5.6.1"
