--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine": "^7.1.0",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.7",
     "@xyflow/react": "^12.6.4",
     "axios": "^1.9.0",
