--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@xyflow/react": "^12.6.4",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
